Fix T80775: Image Editor Show Metadata Not Working